# go-bindata

./: BUILD.bazel  WORKSPACE
cmd/go-bindata/: BUILD.bazel
