load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "AppendSliceValue.go",
        "main.go",
    ],
    importpath = "github.com/logi/third_party/go/go-bindata/cmd/go-bindata",
    visibility = ["//visibility:private"],
    deps = ["@com_github_shulhan_go_bindata//:go_default_library"],
)

go_binary(
    name = "go-bindata",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_shulhan_go_bindata//:go_default_library"],
)
